ui/src/assets/yaml-templates/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: default
  labels:
    app: my-pod
spec:
  containers:
    - name: main
      image: nginx:latest
      ports:
        - containerPort: 80
