ui/src/assets/yaml-templates/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-endpoints
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 80
        protocol: TCP
